--- a/geografia_8.html
+++ b/geografia_8.html
@@ -170,6 +170,39 @@ document.addEventListener('DOMContentLoaded', () => {
             explanation: "Os 'belts' são faixas agrícolas especializadas, como Corn Belt (milho) e Wheat Belt (trigo)."
         },
         {
+            question: "O que caracteriza o Corn Belt?",
+            answer: "Região central dos EUA com produção de milho",
+            options: [
+                "Região central dos EUA com produção de milho",
+                "Área de produção de arroz",
+                "Região de mineração",
+                "Área de pecuária leiteira"
+            ],
+            explanation: "O Corn Belt é famoso pela produção de milho nos EUA."
+        },
+        {
+            question: "O que é o Wheat Belt?",
+            answer: "Região das Grandes Planícies focada em trigo",
+            options: [
+                "Região das Grandes Planícies focada em trigo",
+                "Área de produção de leite",
+                "Região de mineração",
+                "Área de produção de arroz"
+            ],
+            explanation: "O Wheat Belt é uma região produtora de trigo nos EUA."
+        },
+        {
+            question: "O que caracteriza o Rice Belt?",
+            answer: "Produção predominante de arroz no sul dos EUA",
+            options: [
+                "Produção predominante de arroz no sul dos EUA",
+                "Produção de milho",
+                "Produção de trigo",
+                "Produção de algodão"
+            ],
+            explanation: "O Rice Belt é voltado ao cultivo de arroz."
+        },
+        {
             question: "O que caracteriza o sistema plantation?",
             answer: "Monocultura exportadora em grandes propriedades",
             options: [
@@ -179,6 +212,50 @@ document.addEventListener('DOMContentLoaded', () => {
                 "Produção para subsistência"
             ],
             explanation: "Plantation é típico da colonização, com monocultura, exportação e grandes propriedades."
+        },
+        {
+            question: "Qual é a principal característica da monocultura?",
+            answer: "Cultivo de um único produto em larga escala",
+            options: [
+                "Cultivo de um único produto em larga escala",
+                "Diversidade de culturas",
+                "Produção apenas para subsistência",
+                "Uso exclusivo de técnicas orgânicas"
+            ],
+            explanation: "Monocultura é o cultivo de uma única espécie vegetal."
+        },
+        {
+            question: "O que é concentração fundiária?",
+            answer: "Grande parte das terras nas mãos de poucos proprietários",
+            options: [
+                "Grande parte das terras nas mãos de poucos proprietários",
+                "Distribuição igualitária de terras",
+                "Apenas pequenas propriedades",
+                "Uso coletivo da terra"
+            ],
+            explanation: "Concentração fundiária ocorre quando poucas pessoas detêm grandes áreas de terra."
+        },
+        {
+            question: "Qual é uma característica da agricultura familiar?",
+            answer: "Produção em pequena escala para subsistência",
+            options: [
+                "Produção em pequena escala para subsistência",
+                "Grandes propriedades exportadoras",
+                "Uso intensivo de máquinas",
+                "Monocultura"
+            ],
+            explanation: "A agricultura familiar geralmente é feita em pequenas propriedades e voltada para o consumo próprio."
+        },
+        {
+            question: "A agricultura orgânica se caracteriza por:",
+            answer: "Não usar agrotóxicos ou químicos sintéticos",
+            options: [
+                "Não usar agrotóxicos ou químicos sintéticos",
+                "Uso intensivo de fertilizantes químicos",
+                "Monocultura para exportação",
+                "Uso de sementes transgênicas"
+            ],
+            explanation: "A agricultura orgânica prioriza métodos naturais e não usa químicos sintéticos."
         },
         {
             question: "Qual é o principal objetivo da Revolução Verde?",
@@ -203,37 +280,48 @@ document.addEventListener('DOMContentLoaded', () => {
             explanation: "O alto custo da tecnologia excluiu muitos pequenos agricultores."
         },
         {
-            question: "A agricultura orgânica se caracteriza por:",
-            answer: "Não usar agrotóxicos ou químicos sintéticos",
+            question: "O que são sementes transgênicas?",
+            answer: "Sementes geneticamente modificadas",
             options: [
-                "Não usar agrotóxicos ou químicos sintéticos",
-                "Uso intensivo de fertilizantes químicos",
-                "Monocultura para exportação",
-                "Uso de sementes transgênicas"
+                "Sementes geneticamente modificadas",
+                "Sementes orgânicas",
+                "Sementes naturais sem alteração",
+                "Sementes de plantas silvestres"
             ],
-            explanation: "A agricultura orgânica prioriza métodos naturais e não usa químicos sintéticos."
+            explanation: "Transgênicos são organismos geneticamente modificados."
         },
         {
-            question: "O que é concentração fundiária?",
-            answer: "Grande parte das terras nas mãos de poucos proprietários",
+            question: "O que é adubação verde?",
+            answer: "Uso de plantas para enriquecer o solo",
             options: [
-                "Grande parte das terras nas mãos de poucos proprietários",
-                "Distribuição igualitária de terras",
-                "Apenas pequenas propriedades",
-                "Uso coletivo da terra"
+                "Uso de plantas para enriquecer o solo",
+                "Uso de fertilizantes químicos",
+                "Uso de agrotóxicos",
+                "Uso de irrigação artificial"
             ],
-            explanation: "Concentração fundiária ocorre quando poucas pessoas detêm grandes áreas de terra."
+            explanation: "Adubação verde utiliza plantas para melhorar a fertilidade do solo."
         },
         {
-            question: "Qual é uma característica da agricultura familiar?",
-            answer: "Produção em pequena escala para subsistência",
+            question: "O que é controle biológico de pragas?",
+            answer: "Uso de organismos vivos para combater pragas",
             options: [
-                "Produção em pequena escala para subsistência",
-                "Grandes propriedades exportadoras",
-                "Uso intensivo de máquinas",
-                "Monocultura"
+                "Uso de organismos vivos para combater pragas",
+                "Aplicação de pesticidas químicos",
+                "Queima de plantações",
+                "Uso de irrigação"
             ],
-            explanation: "A agricultura familiar geralmente é feita em pequenas propriedades e voltada para o consumo próprio."
+            explanation: "O controle biológico utiliza predadores naturais das pragas."
+        },
+        {
+            question: "O que é rotação de culturas?",
+            answer: "Alternância de diferentes culturas no mesmo solo",
+            options: [
+                "Alternância de diferentes culturas no mesmo solo",
+                "Plantio contínuo de uma só cultura",
+                "Uso de fertilizantes químicos",
+                "Plantio apenas de milho"
+            ],
+            explanation: "A rotação de culturas ajuda a manter a saúde do solo."
         },
         {
             question: "Sobre a mineração, marque a alternativa correta:",
@@ -267,6 +355,160 @@ document.addEventListener('DOMContentLoaded', () => {
                 "Reduzir a fiscalização"
             ],
             explanation: "A fiscalização e o reaproveitamento de rejeitos ajudam a evitar desastres como rompimento de barragens."
+        },
+        {
+            question: "Qual é um impacto ambiental da mineração?",
+            answer: "Desmatamento e degradação do solo",
+            options: [
+                "Desmatamento e degradação do solo",
+                "Aumento da biodiversidade",
+                "Melhora da qualidade da água",
+                "Recuperação imediata do solo"
+            ],
+            explanation: "A mineração pode causar desmatamento e degradação ambiental."
+        },
+        {
+            question: "O que é subsistência na agricultura?",
+            answer: "Produção voltada para o consumo próprio",
+            options: [
+                "Produção voltada para o consumo próprio",
+                "Produção para exportação",
+                "Produção em larga escala",
+                "Produção de sementes transgênicas"
+            ],
+            explanation: "Agricultura de subsistência é para o consumo da família produtora."
+        },
+        {
+            question: "O que é agricultura de exportação?",
+            answer: "Produção agrícola voltada para o mercado externo",
+            options: [
+                "Produção agrícola voltada para o mercado externo",
+                "Produção apenas para subsistência",
+                "Produção orgânica",
+                "Produção de sementes naturais"
+            ],
+            explanation: "Agricultura de exportação visa vender para outros países."
+        },
+        {
+            question: "O que é agricultura intensiva?",
+            answer: "Uso intensivo de insumos e tecnologia para alta produtividade",
+            options: [
+                "Uso intensivo de insumos e tecnologia para alta produtividade",
+                "Uso de técnicas tradicionais",
+                "Baixa produtividade",
+                "Produção apenas orgânica"
+            ],
+            explanation: "Agricultura intensiva utiliza muita tecnologia e insumos."
+        },
+        {
+            question: "O que é agricultura extensiva?",
+            answer: "Baixo uso de insumos e grandes áreas",
+            options: [
+                "Baixo uso de insumos e grandes áreas",
+                "Alta tecnologia em pequenas áreas",
+                "Produção apenas orgânica",
+                "Uso de sementes transgênicas"
+            ],
+            explanation: "Agricultura extensiva usa grandes áreas e poucos insumos."
+        },
+        {
+            question: "Qual é uma vantagem da agricultura orgânica?",
+            answer: "Preserva o solo e a saúde",
+            options: [
+                "Preserva o solo e a saúde",
+                "Aumenta o uso de agrotóxicos",
+                "Reduz a biodiversidade",
+                "Causa poluição"
+            ],
+            explanation: "A agricultura orgânica é mais sustentável e saudável."
+        },
+        {
+            question: "O que é tecnificação do campo?",
+            answer: "Uso de máquinas e tecnologia na agricultura",
+            options: [
+                "Uso de máquinas e tecnologia na agricultura",
+                "Uso apenas de mão de obra humana",
+                "Plantio manual",
+                "Produção sem irrigação"
+            ],
+            explanation: "Tecnificação é a modernização do campo com máquinas e tecnologia."
+        },
+        {
+            question: "O que é poluição do solo?",
+            answer: "Contaminação do solo por produtos químicos",
+            options: [
+                "Contaminação do solo por produtos químicos",
+                "Aumento da fertilidade natural",
+                "Plantio de árvores",
+                "Uso de adubação verde"
+            ],
+            explanation: "Poluição do solo ocorre pelo uso excessivo de químicos."
+        },
+        {
+            question: "O que é poluição da água na agricultura?",
+            answer: "Contaminação de rios e lagos por fertilizantes e agrotóxicos",
+            options: [
+                "Contaminação de rios e lagos por fertilizantes e agrotóxicos",
+                "Aumento da biodiversidade aquática",
+                "Uso de irrigação natural",
+                "Plantio de culturas aquáticas"
+            ],
+            explanation: "O uso de químicos pode contaminar a água."
+        },
+        {
+            question: "O que é biodiversidade?",
+            answer: "Variedade de seres vivos em um ambiente",
+            options: [
+                "Variedade de seres vivos em um ambiente",
+                "Uso de uma só espécie",
+                "Plantio de milho",
+                "Uso de fertilizantes químicos"
+            ],
+            explanation: "Biodiversidade é a variedade de espécies em um local."
+        },
+        {
+            question: "O que é degradação ambiental?",
+            answer: "Danos ao meio ambiente causados por atividades humanas",
+            options: [
+                "Danos ao meio ambiente causados por atividades humanas",
+                "Aumento da fertilidade do solo",
+                "Recuperação de áreas degradadas",
+                "Plantio de culturas variadas"
+            ],
+            explanation: "Degradação ambiental é a destruição do meio ambiente."
+        },
+        {
+            question: "O que é fiscalização ambiental?",
+            answer: "Acompanhamento e controle das atividades que impactam o meio ambiente",
+            options: [
+                "Acompanhamento e controle das atividades que impactam o meio ambiente",
+                "Uso de agrotóxicos",
+                "Plantio de monoculturas",
+                "Produção de sementes transgênicas"
+            ],
+            explanation: "Fiscalização ambiental busca evitar danos ao meio ambiente."
+        },
+        {
+            question: "O que é reaproveitamento de rejeitos?",
+            answer: "Uso dos resíduos da mineração para outros fins",
+            options: [
+                "Uso dos resíduos da mineração para outros fins",
+                "Descartar resíduos em rios",
+                "Queimar resíduos",
+                "Enterrar resíduos sem tratamento"
+            ],
+            explanation: "Reaproveitar rejeitos reduz impactos ambientais."
+        },
+        {
+            question: "O que é produção em larga escala?",
+            answer: "Produção de grandes quantidades para o mercado",
+            options: [
+                "Produção de grandes quantidades para o mercado",
+                "Produção apenas para subsistência",
+                "Produção orgânica",
+                "Produção de sementes naturais"
+            ],
+            explanation: "Produção em larga escala visa atender grandes mercados."
         }
     ];
 
