--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
             <a href="gram_8.html" class="menu-btn px-8 py-5 bg-blue-700 text-white text-xl font-semibold rounded-lg shadow hover:bg-blue-800 transition-colors flex items-center justify-center gap-3">
                 <span>📖 Gramática - 8º Ano (Comparação, Paronomásia, Mal x Mau)</span>
             </a>
+            <a href="hellen_mat.html" class="menu-btn px-8 py-5 bg-emerald-700 text-white text-xl font-semibold rounded-lg shadow hover:bg-emerald-800 transition-colors flex items-center justify-center gap-3">
+                <span>📊 Estatística & Probabilidade - 8º Ano (Hellen)</span>
+            </a>
         </div>
         <footer class="mt-10 text-slate-400 text-sm">
             Para alunos do <strong>8º ano</strong> &middot; Desenvolvido para facilitar seus estudos!
