--- a/hellen_mat.html
+++ b/hellen_mat.html
@@ -105,6 +105,119 @@
                     </div>
                 </div>
             </section>
+            <!-- Adicione este bloco logo acima do <main> para o botão de imprimir as questões -->
+            <div class="flex justify-end mb-4">
+                <button onclick="printQuizQuestions()" class="px-6 py-2 bg-sky-700 text-white font-semibold rounded-lg shadow hover:bg-sky-800 transition-colors">
+                    🖨️ Imprimir Questões
+                </button>
+            </div>
+            <script>
+            function printQuizQuestions() {
+                const quizData = [
+                    {
+                        question: "1. Qual é a amplitude do conjunto: 3, 7, 10, 15, 20?",
+                        options: ["17", "7", "15", "20"]
+                    },
+                    {
+                        question: "2. Veja a tabela de frequências:\nNota | f\n6 | 2\n7 | 5\n8 | 3\nQual a frequência absoluta da nota 7?",
+                        options: ["2", "3", "5", "7"]
+                    },
+                    {
+                        question: "3. Usando a tabela anterior, qual a frequência acumulada da nota 8?",
+                        options: ["2", "5", "8", "10"]
+                    },
+                    {
+                        question: "4. Usando a tabela anterior, qual a frequência relativa da nota 6?",
+                        options: ["0,2", "0,5", "0,3", "0,7"]
+                    },
+                    {
+                        question: "5. Em uma pesquisa, 8 alunos preferem futebol, 6 preferem vôlei e 6 preferem basquete. Qual a frequência relativa dos que preferem vôlei?",
+                        options: ["0,3", "0,4", "0,2", "0,5"]
+                    },
+                    {
+                        question: "6. Qual a probabilidade de sair cara ao lançar uma moeda?",
+                        options: ["1/2", "1/3", "1/4", "2/3"]
+                    },
+                    {
+                        question: "7. Qual a probabilidade de tirar um número par ao lançar um dado comum?",
+                        options: ["1/2", "1/3", "1/6", "2/3"]
+                    },
+                    {
+                        question: "8. Quantas senhas diferentes podem ser formadas com 3 letras (A, B, C) sem repetir?",
+                        options: ["3", "6", "9", "12"]
+                    },
+                    {
+                        question: "9. Se posso escolher entre 2 camisas e 4 calças, quantas combinações diferentes posso fazer?",
+                        options: ["4", "6", "8", "2"]
+                    },
+                    {
+                        question: "10. Veja a tabela:\nCor | f\nAzul | 5\nVerde | 3\nVermelho | 2\nQual a cor mais frequente?",
+                        options: ["Azul", "Verde", "Vermelho", "Todas iguais"]
+                    },
+                    {
+                        question: "11. Em um gráfico de barras, a barra mais alta representa:",
+                        options: ["O valor de maior frequência", "O menor valor", "A média", "A amplitude"]
+                    },
+                    {
+                        question: "12. Veja a tabela:\nIdade | f\n12 | 4\n13 | 6\n14 | 5\nQual a frequência acumulada da idade 13?",
+                        options: ["4", "6", "10", "15"]
+                    },
+                    {
+                        question: "13. Em uma urna com 5 bolas vermelhas e 3 bolas azuis, qual a probabilidade de tirar uma bola azul?",
+                        options: ["3/8", "5/8", "1/2", "1/3"]
+                    },
+                    {
+                        question: "14. Qual é a amplitude dos dados: 12, 15, 18, 20, 25?",
+                        options: ["13", "12", "25", "18"]
+                    },
+                    {
+                        question: "15. Em uma pesquisa, 10 alunos gostam de matemática, 5 de português e 5 de ciências. Qual a frequência relativa dos que gostam de matemática?",
+                        options: ["0,5", "0,25", "0,1", "0,75"]
+                    },
+                    {
+                        question: "16. Em um gráfico de setores (pizza), um setor representa 25% dos alunos. Se há 40 alunos, quantos estão nesse setor?",
+                        options: ["10", "25", "4", "15"]
+                    },
+                    {
+                        question: "17. Em uma tabela:\nNúmero | f\n1 | 2\n2 | 3\n3 | 5\nQual a frequência acumulada do número 2?",
+                        options: ["2", "3", "5", "10"]
+                    },
+                    {
+                        question: "18. Se um dado é lançado duas vezes, quantos resultados diferentes são possíveis?",
+                        options: ["6", "12", "36", "18"]
+                    },
+                    {
+                        question: "19. Em uma pesquisa, 12 alunos têm olhos castanhos, 6 têm olhos azuis e 2 têm olhos verdes. Qual a frequência relativa dos olhos verdes?",
+                        options: ["0,1", "0,2", "0,5", "0,05"]
+                    },
+                    {
+                        question: "20. Em um gráfico de barras, se a barra da categoria 'B' tem altura 8 e a da categoria 'A' tem altura 5, qual categoria tem maior frequência?",
+                        options: ["A", "B", "Ambas iguais", "Não é possível saber"]
+                    }
+                ];
+                let html = `<h2 style="text-align:center;font-family:sans-serif;">Questões de Estatística e Probabilidade - 8º Ano</h2><ol style="font-size:16px;font-family:sans-serif;">`;
+                quizData.forEach((q, i) => {
+                    html += `<li style="margin-bottom:18px;"><strong>${i+1}.</strong> ${q.question.replace(/\n/g, "<br>")}<br>`;
+                    html += `<ul style="list-style-type: lower-alpha; margin-left:20px;">`;
+                    q.options.forEach(opt => {
+                        html += `<li>${opt}</li>`;
+                    });
+                    html += `</ul></li>`;
+                });
+                html += `</ol>`;
+                const win = window.open('', '', 'width=800,height=900');
+                win.document.write(`
+                    <html>
+                    <head>
+                        <title>Questões de Estatística e Probabilidade - 8º Ano</title>
+                    </head>
+                    <body>${html}</body>
+                    </html>
+                `);
+                win.document.close();
+                win.print();
+            }
+            </script>
         </main>
     </div>
     <script>
