--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
             <a href="hellen_mat.html" class="menu-btn px-8 py-5 bg-emerald-700 text-white text-xl font-semibold rounded-lg shadow hover:bg-emerald-800 transition-colors flex items-center justify-center gap-3">
                 <span>📊 Estatística & Probabilidade - 8º Ano (Hellen)</span>
             </a>
+            <a href="histprova1.html" class="menu-btn px-8 py-5 bg-red-700 text-white text-xl font-semibold rounded-lg shadow hover:bg-red-800 transition-colors flex items-center justify-center gap-3">
+                <span>📝 Prova de História 8º Ano</span>
+            </a>
         </div>
         <footer class="mt-10 text-slate-400 text-sm">
             Para alunos do <strong>8º ano</strong> &middot; Desenvolvido para facilitar seus estudos!
