--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
             <a href="histprova1.html" class="menu-btn px-8 py-5 bg-red-700 text-white text-xl font-semibold rounded-lg shadow hover:bg-red-800 transition-colors flex items-center justify-center gap-3">
                 <span>📝 Prova de História 8º Ano</span>
             </a>
+            <a href="cien_pro_8.html" class="menu-btn px-8 py-5 bg-green-700 text-white text-xl font-semibold rounded-lg shadow hover:bg-green-800 transition-colors flex items-center justify-center gap-3">
+                <span>🌑 Terra, Lua, Luz & Eclipses - Ciências 8º Ano</span>
+            </a>
         </div>
         <footer class="mt-10 text-slate-400 text-sm">
             Para alunos do <strong>8º ano</strong> &middot; Desenvolvido para facilitar seus estudos!
