--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
             <a href="cien_pro_8.html" class="menu-btn px-8 py-5 bg-green-700 text-white text-xl font-semibold rounded-lg shadow hover:bg-green-800 transition-colors flex items-center justify-center gap-3">
                 <span>🌑 Terra, Lua, Luz & Eclipses - Ciências 8º Ano</span>
             </a>
+            <a href="mat_pro.html" class="menu-btn px-8 py-5 bg-amber-700 text-white text-xl font-semibold rounded-lg shadow hover:bg-amber-800 transition-colors flex items-center justify-center gap-3">
+                <span>🔶 Polígonos & Quadriláteros - Revisão Prova 9º Ano</span>
+            </a>
         </div>
         <footer class="mt-10 text-slate-400 text-sm">
             Para alunos do <strong>8º ano</strong> &middot; Desenvolvido para facilitar seus estudos!
